# seo_rat

./: .gitignore  README.md  TODO.md  apilist.txt  article.html  article.html.md  cli.html  cli.html.md  content_mapper.html  content_mapper.html.md  content_parser.html  content_parser.html.md  design.md  gsc_client.html  gsc_client.html.md  gsc_insights.html  gsc_insights.html.md  gsc_storage.html  gsc_storage.html.md  index.html  index_tracking.html  index_tracking.html.md  info.md  keyword_ranking.html  keyword_ranking.html.md  models.html  models.html.md  must_features.md  old_tests.ipynb  pyproject.toml  schema_extractor.html  schema_extractor.html.md  schema_validator.html  schema_validator.html.md  search.json  seo_content_analysis.html  seo_content_analysis.html.md  seo_report.html  seo_report.html.md  seo_site_analysis.html  (+4 more)
.github/workflows/: deploy.yaml  test.yaml
nbs/: 00_core.ipynb  00_sqlite.ipynb  013_page_seo_audit.ipynb  01_models.ipynb  01_utils.ipynb  02_content_parser.ipynb  02_website.ipynb  03_article.ipynb  03_seo_analysis.ipynb  04_gsc_client.ipynb  04_searchapi.ipynb  05_gsc_storage.ipynb  05_mongogsc.ipynb  06_index_tracking.ipynb  06_store_gsc.ipynb  07_indextime.ipynb  07_semantic_search.ipynb  08_content_mapper.ipynb  08_semantic_search.ipynb  09_seo_report.ipynb  10_seo_content_analysis.ipynb  11_seo_site_analysis.ipynb  12_gsc_insights.ipynb  13_schema_validator.ipynb  14_schema_extractor.ipynb  15_keyword_ranking.ipynb  16_cli.ipynb  TODO.ipynb  index.ipynb  main.py  sidebar.yml
nbs/data/: seo.db
sample/: TODO.md  design_questions.ipynb
seo_rat/: _modidx.py  article.py  basic_seo.py  content_mapper.py  content_parser.py  core.py  fast_gsc.py  fast_search.py  gsc_client.py  gsc_db.py  gsc_insights.py  gsc_storage.py  index_tracking.py  indextime.py  keyword_ranking.py  models.py  schema_extractor.py  schema_validator.py  seo_analysis.py  seo_content_analysis.py  seo_report.py  seo_site_analysis.py  sqlite_db.py  store_gsc.py  utils.py  website.py
