[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "seo_rat"
dynamic = ["version"]
description = "seo rat is an SEO to give you some help to optimize your content based on markdown for sites like astor, quarto"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "abdelkareemkobo", email = "kareem01095134688@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "fastcore>=1.12.18",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Repository = "https://github.com/abdelkareemkobo/seo_rat"
Documentation = "https://abdelkareemkobo.github.io/seo_rat"

[project.entry-points.nbdev]
seo_rat = "seo_rat._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "seo_rat.__version__"}

[tool.setuptools.packages.find]
include = ["seo_rat"]

[tool.nbdev]
custom_sidebar = false
